example-ingress/kubernetes/api-a.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-a
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: api-a
