example-ingress/kubernetes/api-b.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-b
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: api-b
