example-ingress/kubernetes/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 7e8ecf8e679e4de789c1.centralus.aksapp.io
    http:
      paths:
      - path: /apiA
        backend:
          serviceName: api-a
          servicePort: 80
      - path: /apiB
        backend:
          serviceName: api-b
          servicePort: 80
